[gd_scene load_steps=6 format=3 uid="uid://dfnvqrioyjxqu"]

[ext_resource type="Script" uid="uid://dehdwybiokkgt" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://daisyh88gqg4c" path="res://assets/player_character.blend" id="2_model"]
[ext_resource type="PackedScene" uid="uid://il6pfjix02bv" path="res://scenes/DeathScreen.tscn" id="2_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 2.53488

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qhqgy"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:armor")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_crouching")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")
death_screen_scene = ExtResource("2_qhqgy")

[node name="Model" parent="." instance=ExtResource("2_model")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)

[node name="HeadAttachment" type="BoneAttachment3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="HeadAttachment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2324, -0.0403034)

[node name="ShootingRaycast" type="RayCast3D" parent="HeadAttachment/Camera3D"]
target_position = Vector3(0, 0, -1000)

[node name="GunAttachment" type="BoneAttachment3D" parent="."]

[node name="GunMount" type="Node3D" parent="GunAttachment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 2.02473, -0.3)

[node name="ADSCameraPosition" type="Camera3D" parent="GunAttachment/GunMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160979, -0.0424111, -0.172674)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.2, 0)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="BuyPhaseTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15428, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qhqgy")
